--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
@@ -74,19 +75,26 @@
             <li><i class="fas fa-drafting-compass"></i> Design and Graphics</li>
         </ul>
     </section>
-
-    <!-- Interests Section -->
     <section id="interests">
-        <h2>My Interests</h2>
-        <ul>
-            <li><i class="fas fa-robot"></i> Artificial Intelligence</li>
-            <li><i class="fas fa-laptop"></i> Technology</li>
-            <li><i class="fas fa-book-open"></i> Learning New Skills</li>
-            <li><i class="fas fa-heart"></i> Mental Health Awareness</li>
-        </ul>
+  <h2>Interests</h2>
+  <ul>
+    <li><i class="fas fa-lightbulb"></i> Technology & Innovation</li>
+    <li><i class="fas fa-robot"></i> Exploring Artificial Intelligence</li>
+    <li><i class="fas fa-mobile-alt"></i> Web & Mobile App Development</li>
+    <li><i class="fas fa-heart"></i> Mental Health Awareness</li>
+    <li><i class="fas fa-pencil-ruler"></i> Design & User Experience</li>
+    <li><i class="fas fa-language"></i> Learning New Programming Languages</li>
+    <li><i class="fas fa-puzzle-piece"></i> Creative Problem Solving</li>
+    <li><i class="fas fa-users"></i> Leadership & Mentoring</li>
+    <!-- New Interests -->
+    <li><i class="fas fa-code"></i> Coding</li>
+    <li><i class="fas fa-brain"></i> Learning Programming Languages</li>
+    <li><i class="fas fa-chart-line"></i> Data Science</li>
+    <li><i class="fas fa-cloud"></i> Cloud Computing</li>
+    <li><i class="fas fa-laptop-code"></i> Software Engineering</li>
+  </ul>
     </section>
-
-    <!-- Projects Section -->
+<!-- Projects Section -->
     <section id="projects">
         <h2>My Projects</h2>
         <ul>
