--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css"> <!-- Ensure correct file path -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
     <!-- Sidebar and Hamburger Menu -->
@@ -77,22 +78,20 @@
     </section>
     <section id="interests">
   <h2>Interests</h2>
-  <ul>
-    <li><i class="fas fa-lightbulb"></i> Technology & Innovation</li>
-    <li><i class="fas fa-robot"></i> Exploring Artificial Intelligence</li>
-    <li><i class="fas fa-mobile-alt"></i> Web & Mobile App Development</li>
-    <li><i class="fas fa-heart"></i> Mental Health Awareness</li>
-    <li><i class="fas fa-pencil-ruler"></i> Design & User Experience</li>
-    <li><i class="fas fa-language"></i> Learning New Programming Languages</li>
-    <li><i class="fas fa-puzzle-piece"></i> Creative Problem Solving</li>
-    <li><i class="fas fa-users"></i> Leadership & Mentoring</li>
-    <!-- New Interests -->
-    <li><i class="fas fa-code"></i> Coding</li>
-    <li><i class="fas fa-brain"></i> Learning Programming Languages</li>
-    <li><i class="fas fa-chart-line"></i> Data Science</li>
-    <li><i class="fas fa-cloud"></i> Cloud Computing</li>
-    <li><i class="fas fa-laptop-code"></i> Software Engineering</li>
-  </ul>
+  <div class="interests-grid">
+    <div><i class="fas fa-code"></i> Coding</div>
+    <div><i class="fas fa-brain"></i> Learning Programming Languages</div>
+    <div><i class="fas fa-chart-line"></i> Data Science</div>
+    <div><i class="fas fa-cloud"></i> Cloud Computing</div>
+    <div><i class="fas fa-laptop-code"></i> Software Engineering</div>
+    <div><i class="fas fa-lightbulb"></i> Technology & Innovation</div>
+    <div><i class="fas fa-robot"></i> Exploring AI</div>
+    <div><i class="fas fa-mobile-alt"></i> Web & Mobile App Dev</div>
+    <div><i class="fas fa-heart"></i> Mental Health Awareness</div>
+    <div><i class="fas fa-pencil-ruler"></i> Design & UX</div>
+    <div><i class="fas fa-users"></i> Leadership & Mentoring</div>
+    <div><i class="fas fa-puzzle-piece"></i> Creative Problem Solving</div>
+  </div>
     </section>
 <!-- Projects Section -->
     <section id="projects">
