--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@
         <p>If you'd like to collaborate or just want to say hello, feel free to reach out!</p>
         <p>Email: <a href="mailto:ndukusharon19@gmail.com">Email</a></p>
         <p>Phone: <a href="tel:+254740857628">Call or Text</a></p>
-        <p>LinkedIn: <a href="https://www.linkedin.com/in/sharonnduku" target="_blank">Visit my LinkedIn</a></p>
-        <p>GitHub: <a href="https://github.com/sharonnduku" target="_blank">Visit my GitHub</a></p>
-
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/sharon-nduku-a70949284" target="_blank">Visit my LinkedIn</a></p>
+<p>GitHub: <a href="https://github.com/ronsha-coder" target="_blank">Visit my GitHub</a></p>
+        /a></p>
         <!-- Contact Form -->
         <form action="your-form-handling-url" method="POST">
             <input type="text" name="name" placeholder="Your Name" required>
